Fixed spacing bug.

--- a/core/app/assets/stylesheets/tour/install_extension.css.less
+++ b/core/app/assets/stylesheets/tour/install_extension.css.less
@@ -4,7 +4,7 @@
 #container .install-extension-wrapper {
   position: relative;
   text-align: center;
-  padding-top: 40px;
+  padding-top: 30px;
 
   a.btn {
     padding: 11px 19px;
